Edited cart nav formatting for navbar on base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
 					<a class="nav-link" href="#">Account</a>
 				</li>
 			</ul>
-            <ul class="inline my-2 my-lg-0">
+            <ul class="navbar-nav inline my-2 my-lg-0">
                 <li class="nav-item">
 					<a class="nav-link" href="#">Cart</a>
 				</li>
