--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -2,4 +2,20 @@
 
 {% block content %}
 
+{% if messages %}
+<div class="alert alert-success" role="alert">
+  {% for message in messages %}
+    {{ message }}
+  {% endfor %}
+</div>
+{% endif %}
+<div class="container mt-4">
+    <div class="col-12">
+        <div class="row">
+            <h1>Login</h1>
+        </div>
+    </div>
+</div>
+
+
 {% endblock %}
