--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
 <body>
     <!-- NAVBAR -->
 	<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-		<a class="navbar-brand" href="#">Tierney Photo</a>
+		<a class="navbar-brand" href="#">Tierney Photography</a>
 		<button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -33,7 +33,10 @@
 					<a class="nav-link" href="#">About</a>
 				</li>
                 <li class="nav-item">
-					<a class="nav-link" href="#">Account</a>
+					<a class="nav-link" href="{% url 'login' %}">Account</a>
+				</li>
+                <li class="nav-item">
+					<a class="nav-link" href="{% url 'logout' %}">Logout</a>
 				</li>
 			</ul>
             <ul class="navbar-nav inline my-2 my-lg-0">
@@ -48,6 +51,10 @@
     {% block content %}
 
     {% endblock %}
+
+    <!-- FOOTER -->
+
+    <!-- /FOOTER -->
 
 	<!-- SCRIPTS -->
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
