--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -1,14 +1,9 @@
 {% extends "base.html" %}
 
+{% block page_title %}Login Page{% endblock%}
+
 {% block content %}
 
-{% if messages %}
-<div class="alert alert-success" role="alert">
-  {% for message in messages %}
-    {{ message }}
-  {% endfor %}
-</div>
-{% endif %}
 <div class="container mt-4">
     <div class="col-12">
         <div class="row">
@@ -17,5 +12,16 @@
     </div>
 </div>
 
+<div class="container mt-4">
+    <div class="col-12">
+        <div class="row">
+            <form method="POST">
+            {% csrf_token %}
+            {{ login_form }}
+            <button type="submit" class="btn btn-primary">Login</button>
+            </form>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
