--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Tierney Photography</title>
+	<title>{% block page_title %}{% endblock %}</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.4.1/lux/bootstrap.min.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -13,7 +13,7 @@
 <body>
     <!-- NAVBAR -->
 	<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-		<a class="navbar-brand" href="#">Tierney Photography</a>
+		<a class="navbar-brand" href="{% url 'index' %}">Tierney Photography</a>
 		<button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -21,7 +21,7 @@
 		<div class="navbar-collapse collapse" id="navbarColor01" style="">
 			<ul class="navbar-nav mr-auto">
 				<li class="nav-item active">
-					<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+					<a class="nav-link" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="#">Gallery</a>
@@ -32,12 +32,21 @@
 				<li class="nav-item">
 					<a class="nav-link" href="#">About</a>
 				</li>
+                {% if user.is_authenticated %}
                 <li class="nav-item">
 					<a class="nav-link" href="{% url 'login' %}">Account</a>
 				</li>
                 <li class="nav-item">
 					<a class="nav-link" href="{% url 'logout' %}">Logout</a>
 				</li>
+                {% else %}
+                <li class="nav-item">
+					<a class="nav-link" href="{% url 'login' %}">Login</a>
+				</li>
+                <li class="nav-item">
+					<a class="nav-link" href="{% url 'logout' %}">Register</a>
+				</li>
+                {% endif %}
 			</ul>
             <ul class="navbar-nav inline my-2 my-lg-0">
                 <li class="nav-item">
@@ -48,9 +57,21 @@
 	</nav>
     <!-- /NAVBAR -->
 
+    <!-- MESSAGES -->
+    {% if messages %}
+    <div class="alert alert-success" role="alert">
+    {% for message in messages %}
+        {{ message }}
+    {% endfor %}
+    </div>
+    {% endif %}
+    <!-- /MESSAGES -->
+
+    <!-- PAGE-CONTENT -->
     {% block content %}
 
     {% endblock %}
+    <!-- /PAGE-CONTENT -->
 
     <!-- FOOTER -->
 
