--- a/accounts/templates/registration.html
+++ b/accounts/templates/registration.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
 
-{% block page_title %}Login Page{% endblock%}
+{% block page_title %}Registration Page{% endblock%}
 
 {% block content %}
 
 <div class="container mt-4">
     <div class="col-12">
         <div class="row">
-            <h1>Login</h1>
+            <h1>Register</h1>
         </div>
     </div>
 </div>
@@ -17,8 +17,8 @@
         <div class="row">
             <form method="POST">
             {% csrf_token %}
-            {{ login_form }}
-            <button type="submit" class="btn btn-primary">Login</button>
+            {{ registration_form.as_p }}
+            <button type="submit" class="btn btn-primary">Register</button>
             </form>
         </div>
     </div>
@@ -27,10 +27,10 @@
 <div class="container mt-4">
     <div class="col-12">
         <div class="row">
-            <p>Don't have an account yet? You can register below!</p>
+            <p>Already have an account? You can login below!</p>
         </div>
         <div class="row">
-            <a href="{% url 'registration' %}" class="btn btn-primary">Register</a>
+            <a href="{% url 'login' %}" class="btn btn-primary">Login</a>
         </div>
     </div>
 </div>
