--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
 				</li>
                 {% if user.is_authenticated %}
                 <li class="nav-item">
-					<a class="nav-link" href="{% url 'login' %}">Account</a>
+					<a class="nav-link" href="{% url 'profile' %}">Account</a>
 				</li>
                 <li class="nav-item">
 					<a class="nav-link" href="{% url 'logout' %}">Logout</a>
@@ -44,7 +44,7 @@
 					<a class="nav-link" href="{% url 'login' %}">Login</a>
 				</li>
                 <li class="nav-item">
-					<a class="nav-link" href="{% url 'logout' %}">Register</a>
+					<a class="nav-link" href="{% url 'registration' %}">Register</a>
 				</li>
                 {% endif %}
 			</ul>
