--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
 					<a class="nav-link" href="#">Gallery</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">Shop</a>
+					<a class="nav-link" href="{% url 'shop' %}">Shop</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="#">About</a>
@@ -38,7 +38,8 @@
                 {% if user.is_authenticated %}
                     {% if user.is_superuser %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'admin' %}">Admin</a>
+                            <!-- <a class="nav-link" href="{% url 'new_photoset' %}">Admin</a> -->
+                            <a class="nav-link" href="{% url 'admin:index' %}">Admin</a>
                         </li>
                     {% endif %}
                 <li class="nav-item">
