--- a/shop/templates/shopdetail.html
+++ b/shop/templates/shopdetail.html
@@ -15,13 +15,13 @@
     <div class="row">
 		<div class="col-12">
 			<div class="card border-primary mb-3">
-				<img style="height: 200px; width: 100%; display: block;" src="/media/{{ photoset.preview_image }}" alt="Card image">
+				<img style="height: 200px; width: 100%; display: block;" src="{{ MEDIA_URL }}{{ photoset.preview_image }}" alt="Card image">
 				<div class="card-body">
 					<p class="card-text">{{ photoset.description }}</p>
 				</div>
 				<div class="card-body">
 					<div class="card-text">£ {{ photoset.price }}</div>
-					<a href="#" class="btn btn-danger btn-sm">Add to cart</a>
+					<a action="{% url 'add_to_cart' photoset.id %}" class="btn btn-danger btn-sm">Add to cart</a>
 				</div>
 				<div class="card-footer text-muted">
 					{{ photoset.published_date }}
