--- a/templates/base.html
+++ b/templates/base.html
@@ -59,7 +59,7 @@
 			</ul>
             <ul class="navbar-nav inline my-2 my-lg-0">
                 <li class="nav-item">
-					<a class="nav-link" href="#">Cart</a>
+					<a class="nav-link" href="{% url 'view_cart' %}">Cart</a>
 				</li>
             </ul>
 		</div>
