--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -3,7 +3,6 @@
 {% block page_title %}Cart{% endblock %}
 
 {% block content %}
-
 <div class="container mt-4">
 	<div class="col-12">
 		<div class="row">
@@ -24,51 +23,23 @@
 				</tr>
 			</thead>
 			<tbody>
-
-				<!-- For loop to input cart contents-->
 				{% for item in cart_items %}
                 <tr>
-					<th scope="row"><a action="{% url 'remove_from_cart' item.id">X</a></th>
-					<td>{{ item.photoset.preview_image }}</td>
+					<th scope="row"><a href="{% url 'remove_from_cart' item.id %}">X</a></th>
+					<td><img style="height: 75px; width: 75px" src="{{ MEDIA_URL }}{{ item.photoset.preview_image }}" alt="Card image"></td>
 					<td>{{ item.photoset.title }}</td>
 					<td>£ {{ item.photoset.price }}</td>
 				</tr>
                 {% endfor %}
-				<!-- /For loop to input cart contents-->
-
-				<!-- Total to go in here with checkout button-->
 				<tr class="table-secondary">
 					<th scope="row"></th>
 					<td></td>
 					<td>Cart Total: </td>
 					<td>£ {{ total }}</td>
 				</tr>
-				<!-- /Total to go in here with checkout button-->
-
 			</tbody>
 		</table>
         <a href="/" type="button" class="btn btn-success">Checkout</a>
 	</div>
 </div>
-
-<!-- {% for photoset in photosets %}
-		<div class="col-4">
-			<a href="{% url 'photoset_detail' photoset.id %}"><div class="card border-primary mb-3">
-				<h3 class="card-header">{{ photoset.title }}</h3>
-				<img style="height: 200px; width: 100%; display: block;" src="{{ MEDIA_URL }}{{ photoset.preview_image }}" alt="Card image">
-				<div class="card-body">
-					<p class="card-text">{{ photoset.description|truncatewords:10 }}</p>
-				</div>
-				<div class="card-body">
-					<div class="card-text">£ {{ photoset.price }}</div>
-					<a action="{% url 'add_to_cart' photoset.id %}" class="btn btn-danger btn-sm">Add to cart</a>
-				</div>
-				<div class="card-footer text-muted">
-					{{ photoset.published_date }}
-				</div>
-			</div></a>
-		</div>
-	{% endfor %} -->
-
-
 {% endblock %}
