Checkout now added, fully functional

--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -39,7 +39,7 @@
 				</tr>
 			</tbody>
 		</table>
-        <a href="/" type="button" class="btn btn-success">Checkout</a>
+        <a href="{% url 'checkout' %}" type="button" class="btn btn-success">Checkout</a>
 	</div>
-</div>
+</div
 {% endblock %}
