--- a/shop/templates/shop.html
+++ b/shop/templates/shop.html
@@ -17,8 +17,8 @@
 		<div class="col-4">
 			<a href="{% url 'photoset_detail' photoset.id %}"><div class="card border-primary mb-3">
 				<h3 class="card-header">{{ photoset.title }}</h3>
-				<img style="height: 200px; width: 100%; display: block;" src="{{ MEDIA_URL }}{{ photoset.preview_image }}" alt="Card image">
-				<div class="card-body">
+				<div class="photoset-preview-image" style="background-image: url('{{ MEDIA_URL }}{{ photoset.preview_image }}')" alt="Card image"></div>
+                <div class="card-body">
 					<p class="card-text">{{ photoset.description|truncatewords:10 }}</p>
 				</div>
 				<div class="card-body">
