--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,9 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.4.1/lux/bootstrap.min.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="{% static 'css/custom.css' %}">
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    {% block head_js %}
+    {% endblock head_js %}
 </head>
 
 <body>
@@ -59,7 +62,7 @@
 			</ul>
             <ul class="navbar-nav inline my-2 my-lg-0">
                 <li class="nav-item">
-					<a class="nav-link" href="{% url 'view_cart' %}">Cart</a>
+					<a class="nav-link" href="{% url 'view_cart' %}">Cart ({{ photoset_count }})</a>
 				</li>
             </ul>
 		</div>
