--- a/accounts/templates/profile.html
+++ b/accounts/templates/profile.html
@@ -5,19 +5,48 @@
 {% block content %}
 
 <div class="container mt-4">
-    <div class="col-12">
-        <div class="row">
-            <h1>{{ user }}'s Profile</h1>
-        </div>
-    </div>
+	<div class="col-12">
+		<div class="row">
+			<ul class="nav nav-pills">
+				<li class="nav-item">
+					<a class="nav-link active" href="{% url 'profile' %}">Account Details</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="{% url 'orders' %}">Orders</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="{% url 'downloads' %}">Downloads</a>
+				</li>
+			</ul>
+		</div>
+	</div>
 </div>
 
 <div class="container mt-4">
-    <div class="col-12">
-        <div class="row">
-            <h1>{{ profile.email }}</h1>
-        </div>
-    </div>
+	<div class="col-12">
+		<div class="row">
+			<h1>{{ user }}'s Profile</h1>
+		</div>
+	</div>
 </div>
+
+<div class="container mt-4">
+	<div class="col-12">
+		<div class="row">
+			<h5>Email</h5>
+		</div>
+        <div class="row">
+			<p>{{ profile.email }}</p>
+		</div>
+        <div class="row">
+			<h5>Username</h5>
+		</div>
+        <div class="row">
+			<p>{{ profile.username }}</p>
+		</div>
+	</div>
+</div>
+
+
 
 {% endblock %}
