--- a/accounts/templates/downloads.html
+++ b/accounts/templates/downloads.html
@@ -44,8 +44,7 @@
 						<p class="card-text">{{ item.photoset.description|truncatewords:10 }}</p>
 					</div>
 					<div class="card-body">
-						<a href="#" class="btn btn-danger btn-sm">Download</a>
-                        
+                        <a href="{{ MEDIA_URL }}{{ item.photoset.photo_set }}" class="btn btn-danger btn-sm" download>Download</a>
 					</div>
 				</div>
 		</div>
