--- a/accounts/templates/downloads.html
+++ b/accounts/templates/downloads.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
-
 {% block page_title %}{{ user }}'s Downloads{% endblock%}
 
 {% block content %}
 
+<!-- NAV PILLS -->
 <div class="container mt-4">
 	<div class="col-12">
 		<div class="row">
@@ -21,7 +21,9 @@
 		</div>
 	</div>
 </div>
+<!-- /NAV PILLS -->
 
+<!-- PAGE TITLE -->
 <div class="container mt-4">
 	<div class="col-12">
 		<div class="row">
@@ -29,12 +31,14 @@
 		</div>
 	</div>
 </div>
+<!-- /PAGE TITLE -->
 
-<div class="container mt-4">
+<!-- PHOTOSET CARDS -->
+<div class="container before-footer mt-4">
 	<div class="row">
 		{% for order in orders %}
 		{% for item in order.orderlineitem_set.all %}
-		<div class="col-4">
+		<div class="col-md-12 col-lg-4">
 				<div class="card border-primary mb-3">
 					<h3 class="card-header">{{ item.photoset.title }}</h3>
 					<div class="photoset-preview-image"
@@ -52,5 +56,6 @@
 		{% endfor %}
 	</div>
 </div>
+<!-- /PHOTOSET CARDS -->
 
 {% endblock %}
