--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -6,6 +6,7 @@
 
 {% block content %}
 
+<!-- PAGE TITLE -->
 <div class="container mt-4">
     <div class="col-12">
         <div class="row">
@@ -13,7 +14,9 @@
         </div>
     </div>
 </div>
+<!-- /PAGE TITLE -->
 
+<!-- LOGIN FORM -->
 <div class="container mt-4">
     <div class="col-12">
         <div class="row">
@@ -25,8 +28,10 @@
         </div>
     </div>
 </div>
+<!-- /LOGIN FORM -->
 
-<div class="container mt-4">
+<!-- REGISTRATION LINK -->
+<div class="container mt-4 before-footer">
     <div class="col-12">
         <div class="row">
             <p>Don't have an account yet? You can register below!</p>
@@ -36,5 +41,6 @@
         </div>
     </div>
 </div>
+<!-- /REGISTRATION LINK -->
 
 {% endblock %}
