--- a/accounts/templates/orders.html
+++ b/accounts/templates/orders.html
@@ -4,6 +4,7 @@
 
 {% block content %}
 
+<!-- NAV PILLS -->
 <div class="container mt-4">
 	<div class="col-12">
 		<div class="row">
@@ -21,7 +22,9 @@
 		</div>
 	</div>
 </div>
+<!-- /NAV PILLS -->
 
+<!-- PAGE TITLE -->
 <div class="container mt-4">
 	<div class="col-12">
 		<div class="row">
@@ -29,8 +32,10 @@
 		</div>
 	</div>
 </div>
+<!-- /PAGE TITLE -->
 
-<div class="container mt-4">
+<!-- ORDERS TABLE -->
+<div class="container mt-4 before-footer">
 	<div class="row">
 		<table class="table table-hover">
 			<thead>
@@ -56,5 +61,6 @@
 		</table>
 	</div>
 </div>
+<!-- /ORDERS TABLE -->
 
 {% endblock %}
