--- a/accounts/templates/profile.html
+++ b/accounts/templates/profile.html
@@ -4,6 +4,7 @@
 
 {% block content %}
 
+<!-- NAV PILLS -->
 <div class="container mt-4">
 	<div class="col-12">
 		<div class="row">
@@ -21,7 +22,9 @@
 		</div>
 	</div>
 </div>
+<!-- /NAV PILLS -->
 
+<!-- PAGE TITLE -->
 <div class="container mt-4">
 	<div class="col-12">
 		<div class="row">
@@ -29,8 +32,10 @@
 		</div>
 	</div>
 </div>
+<!-- /PAGE TITLE -->
 
-<div class="container mt-4">
+<!-- PROFILE DETAILS -->
+<div class="container mt-4 before-footer">
 	<div class="col-12">
 		<div class="row">
 			<h5>Email</h5>
@@ -46,7 +51,6 @@
 		</div>
 	</div>
 </div>
-
-
+<!-- /PROFILE DETAILS -->
 
 {% endblock %}
