--- a/accounts/templates/registration.html
+++ b/accounts/templates/registration.html
@@ -6,6 +6,7 @@
 
 {% block content %}
 
+<!-- PAGE TITLE -->
 <div class="container mt-4">
     <div class="col-12">
         <div class="row">
@@ -13,7 +14,9 @@
         </div>
     </div>
 </div>
+<!-- /PAGE TITLE -->
 
+<!-- REGISTRATION FORM -->
 <div class="container mt-4">
     <div class="col-12">
         <div class="row">
@@ -25,8 +28,10 @@
         </div>
     </div>
 </div>
+<!-- /REGISTRATION FORM -->
 
-<div class="container mt-4">
+<!-- LOGIN LINK -->
+<div class="container mt-4 before-footer">
     <div class="col-12">
         <div class="row">
             <p>Already have an account? You can login below!</p>
@@ -36,5 +41,6 @@
         </div>
     </div>
 </div>
+<!-- /LOGIN LINK -->
 
 {% endblock %}
