--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -3,6 +3,8 @@
 {% block page_title %}Cart{% endblock %}
 
 {% block content %}
+
+<!-- PAGE TITLE -->
 <div class="container mt-4">
 	<div class="col-12">
 		<div class="row">
@@ -10,14 +12,16 @@
 		</div>
 	</div>
 </div>
+<!-- /PAGE TITLE -->
 
-<div class="container mt-4">
+<!-- CART TABLE -->
+<div class="container mt-4 before-footer">
 	<div class="row">
 		<table class="table table-hover">
 			<thead>
 				<tr>
 					<th scope="col"></th>
-					<th scope="col">Image</th>
+					<th scope="col" class="d-none d-sm-block">Image</th>
 					<th scope="col">Photoset</th>
 					<th scope="col">Price</th>
 				</tr>
@@ -26,20 +30,22 @@
 				{% for item in cart_items %}
                 <tr>
 					<th scope="row"><a href="{% url 'remove_from_cart' item.id %}">X</a></th>
-					<td><div class="cart-preview-image" style="background-image: url('{{ MEDIA_URL }}{{ item.photoset.preview_image }}')" alt="Card image"></div></td>
+					<td class="d-none d-sm-block"><div class="cart-preview-image" style="background-image: url('{{ MEDIA_URL }}{{ item.photoset.preview_image }}')" alt="Card image"></div></td>
 					<td>{{ item.photoset.title }}</td>
 					<td>£ {{ item.photoset.price }}</td>
 				</tr>
                 {% endfor %}
 				<tr class="table-secondary">
 					<th scope="row"></th>
-					<td></td>
+					<td class="d-none d-sm-block"></td>
 					<td>Cart Total: </td>
 					<td>£ {{ total }}</td>
 				</tr>
 			</tbody>
 		</table>
-        <a href="{% url 'checkout' %}" type="button" class="btn btn-success">Checkout</a>
+        <a href="{% url 'checkout' %}" type="button" class="btn btn-success ml-3 mb-2">Checkout</a>
 	</div>
-</div
+</div>
+<!-- /CART TABLE -->
+
 {% endblock %}
