--- a/checkout/templates/checkout.html
+++ b/checkout/templates/checkout.html
@@ -3,18 +3,21 @@
 {% load bootstrap_tags %}
 {% block page_title %}Checkout{% endblock %}
 
+<!-- STRIPE JAVASCRIPT -->
 {% block head_js %}
 <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
 <script type="text/javascript">
-    //<![CDATA[
+	//<![CDATA[
         Stripe.publishableKey = '{{ publishable }}';
     //]]>
 </script>
 <script type="text/javascript" src="{% static 'js/stripe.js' %}"></script>
 {% endblock head_js %}
+<!-- /STRIPE JAVASCRIPT -->
 
 {% block content %}
 
+<!-- PAGE TITLE -->
 <div class="container mt-4">
 	<div class="col-12">
 		<div class="row">
@@ -22,57 +25,75 @@
 		</div>
 	</div>
 </div>
+<!-- /PAGE TITLE -->
 
+<!-- CHECKOUT TABLE -->
 <div class="container mt-4">
 	<div class="row">
-		<table class="table table-hover">
-			<thead>
-				<tr>
-					<th scope="col"></th>
-					<th scope="col">Image</th>
-					<th scope="col">Photoset</th>
-					<th scope="col">Price</th>
-				</tr>
-			</thead>
-			<tbody>
-				{% for item in cart_items %}
-                <tr>
-					<th scope="row"><a href="{% url 'remove_from_cart' item.id %}">X</a></th>
-					<td><div class="cart-preview-image" style="background-image: url('{{ MEDIA_URL }}{{ item.photoset.preview_image }}')" alt="Card image"></div></td>
-					<td>{{ item.photoset.title }}</td>
-					<td>£ {{ item.photoset.price }}</td>
-				</tr>
-                {% endfor %}
-				<tr class="table-secondary">
-					<th scope="row"></th>
-					<td></td>
-					<td>Cart Total: </td>
-					<td>£ {{ total }}</td>
-				</tr>
-			</tbody>
-		</table>
+		<div class="col-12">
+			<table class="table table-hover">
+				<thead>
+					<tr>
+						<th scope="col"></th>
+						<th scope="col" class="d-none d-sm-block">Image</th>
+						<th scope="col">Photoset</th>
+						<th scope="col">Price</th>
+					</tr>
+				</thead>
+				<tbody>
+					{% for item in cart_items %}
+					<tr>
+						<th scope="row"><a href="{% url 'remove_from_cart' item.id %}">X</a></th>
+						<td class="d-none d-sm-block">
+							<div class="cart-preview-image"
+								style="background-image: url('{{ MEDIA_URL }}{{ item.photoset.preview_image }}')"
+								alt="Card image"></div>
+						</td>
+						<td>{{ item.photoset.title }}</td>
+						<td>£ {{ item.photoset.price }}</td>
+					</tr>
+					{% endfor %}
+					<tr class="table-secondary">
+						<th scope="row"></th>
+						<td class="d-none d-sm-block"></td>
+						<td>Cart Total: </td>
+						<td>£ {{ total }}</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
 	</div>
 </div>
+<!-- /CHECKOUT TABLE -->
 
-<form role="form" method="post" id="payment-form" action="{% url 'checkout' %}">
-    <legend>Payment Details</legend>
+<!-- CHECKOUT FORM -->
+<div class="container my-2 before-footer">
+	<div class="row">
+		<div class="col-12">
+			<form role="form" method="post" id="payment-form" action="{% url 'checkout' %}">
+				<legend>Payment Details</legend>
 
-    <div id="credit-card-errors" style="display:none">
-        <div class="alert-message block-message error" id="stripe-error-message"></div>
+				<div id="credit-card-errors" style="display:none">
+					<div class="alert-message block-message error" id="stripe-error-message"></div>
+				</div>
+
+				<div class="form-group col-md-12">
+					{{ order_form | as_bootstrap }}
+				</div>
+
+				<div class="form-group col-md-12">
+					{{ payment_form | as_bootstrap }}
+				</div>
+
+				{% csrf_token %}
+				<div class="form-group col-md-12">
+					<input class="btn btn-primary" id="sumbit_payment_btn" name="commit" type="submit" value="Submit Payment">
     </div>
+			</form>
+		</div>
+	</div>
+</div>
+<!-- CHECKOUT FORM -->
 
-    <div class="form-group col-md-12">
-        {{ order_form | as_bootstrap }}
-    </div>
-
-    <div class="form-group col-md-12">
-        {{ payment_form | as_bootstrap }}
-    </div>
-
-    {% csrf_token %}
-    <div class="form-group col-md-12">
-        <input class="btn btn-primary" id="sumbit_payment_btn" name="commit" type="submit" value="Submit Payment">
-    </div>
-</form>
 
 {% endblock %}
