--- a/shop/templates/photosetform.html
+++ b/shop/templates/photosetform.html
@@ -6,6 +6,7 @@
 
 {% block content %}
 
+<!-- PAGE TITLE -->
 <div class="container mt-4">
     <div class="col-12">
         <div class="row">
@@ -13,8 +14,10 @@
         </div>
     </div>
 </div>
+<!-- /PAGE TITLE -->
 
-<div class="container mt-4">
+<!-- UPLOAD FORM -->
+<div class="container mt-4 before-footer">
     <div class="col-12">
         <div class="row">
             <form method="POST">
@@ -25,5 +28,6 @@
         </div>
     </div>
 </div>
+<!-- /UPLOAD FORM -->
 
 {% endblock %}
