--- a/shop/templates/shopdetail.html
+++ b/shop/templates/shopdetail.html
@@ -3,6 +3,8 @@
 {% block page_title %}photoset.title{% endblock %}
 
 {% block content %}
+
+<!-- PAGE TITLE -->
 <div class="container mt-4">
     <div class="col-12">
         <div class="row">
@@ -10,8 +12,10 @@
         </div>
     </div>
 </div>
+<!-- /PAGE TITLE -->
 
-<div class="container mt-4">
+<!-- PHOTOSET CARD -->
+<div class="container mt-4 before-footer">
     <div class="row">
 		<div class="col-12">
 			<div class="card border-primary mb-3">
@@ -31,8 +35,10 @@
     </div>
     <div class="row">
         <div class="col-4">
-            <a href="{% url 'shop' %}" class="btn btn-primary">Back to Shop</a>
+            <a href="{% url 'shop' %}" class="btn btn-primary mb-2">Back to Shop</a>
         </div>
     </div>
 </div>
+<!-- PHOTOSET CARD -->
+
 {% endblock %}
