--- a/templates/base.html
+++ b/templates/base.html
@@ -103,7 +103,7 @@
 						<li class="list-inline-item nav-item">
 							<a class="footer-link" href="#"><i class="fab fa-linkedin-in"></i></a>
 						</li>
-						<li class="list-inline-item nav-item">
+						<li class="list-inline-item nav-item mr-2">
 							<a class="footer-link" href="#"><i class="fab fa-instagram"></i></a>
 						</li>
 					</ul>
