--- a/gallery/templates/gallery.html
+++ b/gallery/templates/gallery.html
@@ -15,7 +15,7 @@
 <!-- /PAGE TITLE -->
 
 <!-- CAROUSEL -->
-<div class="container-fluid carousel-container">
+<div class="container-fluid carousel-container mt-2">
 	<div class="row">
 		<div class="col-12">
 			<div id="carouselHome" class="carousel slide" data-ride="carousel">
