--- a/checkout/templates/checkout.html
+++ b/checkout/templates/checkout.html
@@ -34,8 +34,8 @@
 			<table class="table table-hover">
 				<thead>
 					<tr>
-						<th scope="col"></th>
-						<th scope="col" class="d-none d-sm-block">Image</th>
+						<th scope="col">Remove</th>
+						<!-- <th scope="col" class="d-none d-sm-block">Image</th> -->
 						<th scope="col">Photoset</th>
 						<th scope="col">Price</th>
 					</tr>
@@ -44,18 +44,18 @@
 					{% for item in cart_items %}
 					<tr>
 						<th scope="row"><a href="{% url 'remove_from_cart' item.id %}" class="remove-from-cart">X</a></th>
-						<td class="d-none d-sm-block">
+						<!-- <td class="d-none d-sm-block">
 							<div class="cart-preview-image"
 								style="background-image: url('{{ MEDIA_URL }}{{ item.photoset.preview_image }}')"
 								alt="Card image"></div>
-						</td>
+						</td> -->
 						<td>{{ item.photoset.title }}</td>
 						<td>£ {{ item.photoset.price }}</td>
 					</tr>
 					{% endfor %}
 					<tr class="table-secondary">
 						<th scope="row"></th>
-						<td class="d-none d-sm-block"></td>
+						<!-- <td class="d-none d-sm-block"></td> -->
 						<td>Cart Total: </td>
 						<td>£ {{ total }}</td>
 					</tr>
