Information added to readme. Footer links now open in new tabs and go to the websites specified.

--- a/about/templates/about.html
+++ b/about/templates/about.html
@@ -37,7 +37,7 @@
                 <p>My name is Daniel Tierney and I am a professional photographer.</p>
                 <p>I grew up in the grey skied town of Oldham, working where ever I could to get by.
                 During those periods I would go out into the countryside and take pictures as a hobby.
-                Due to support from friends/family I made the big leap to doing it full time, and it's so far working out.</p>
+                Due to support from friends/family I made the big leap to doing it full time, and it's working out so far.</p>
                 <p> I love long walks on the beach and anything greyscale.</p>
             </div>
             <div class="col-md-12 col-lg-6">
