--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,6 @@
 				{% if user.is_authenticated %}
 				{% if user.is_superuser %}
 				<li class="nav-item">
-					<!-- <a class="nav-link" href="{% url 'new_photoset' %}">Admin</a> -->
 					<a class="nav-link" href="{% url 'admin:index' %}">Admin</a>
 				</li>
 				{% endif %}
@@ -95,16 +94,16 @@
 				<div class="col-12 pt-3 text-center">
 					<ul class="list-inline">
 						<li class="list-inline-item nav-item">
-							<a class="footer-link" href="#"><i class="fab fa-facebook-f"></i></a>
+							<a class="footer-link" href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a>
 						</li>
 						<li class="list-inline-item nav-item">
-							<a class="footer-link" href="#"><i class="fab fa-twitter"></i></a>
+							<a class="footer-link" href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
 						</li>
 						<li class="list-inline-item nav-item">
-							<a class="footer-link" href="#"><i class="fab fa-linkedin-in"></i></a>
+							<a class="footer-link" href="https://uk.linkedin.com/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
 						</li>
 						<li class="list-inline-item nav-item mr-2">
-							<a class="footer-link" href="#"><i class="fab fa-instagram"></i></a>
+							<a class="footer-link" href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
 						</li>
 					</ul>
 				</div>
