Added javascript function to highlight cart green. Added formatting to the remove X in cart/checkout so it's more visible

--- a/about/templates/about.html
+++ b/about/templates/about.html
@@ -19,7 +19,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 col-lg-6 mb-2">
-				<img src="{% static 'img/camera.jpg' %}" class="img-fluid mx-auto d-block"/>
+				<img src="{% static 'img/camera.jpg' %}" class="img-fluid mx-auto d-block" alt="Camera"/>
             </div>
 			<div class="col-md-12 col-lg-6">
                 <p>Welcome to the website of Tierney Photography. This business was created in 2020 after
@@ -41,7 +41,7 @@
                 <p> I love long walks on the beach and anything greyscale.</p>
             </div>
             <div class="col-md-12 col-lg-6">
-                <img src="{% static 'img/tierney-photographer.jpg' %}" class="img-fluid mx-auto d-block"/>
+                <img src="{% static 'img/tierney-photographer.jpg' %}" class="img-fluid mx-auto d-block" alt="Tierney"/>
             </div>
         </div>
     </div>
