--- a/accounts/templates/downloads.html
+++ b/accounts/templates/downloads.html
@@ -41,9 +41,7 @@
 		<div class="col-md-12 col-lg-4">
 				<div class="card border-primary mb-3">
 					<h3 class="card-header">{{ item.photoset.title }}</h3>
-					<div class="photoset-preview-image"
-						style="background-image: url('{{ MEDIA_URL }}{{ item.photoset.preview_image }}')"
-						alt="Card image"></div>
+					<div class="photoset-preview-image" style="background-image: url('{{ MEDIA_URL }}{{ item.photoset.preview_image }}')"></div>
 					<div class="card-body">
 						<p class="card-text">{{ item.photoset.description|truncatewords:10 }}</p>
 					</div>
