--- a/shop/templates/shopdetail.html
+++ b/shop/templates/shopdetail.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block page_title %}photoset.title{% endblock %}
+{% block page_title %}{{ photoset.title }}{% endblock %}
 
 {% block content %}
 
@@ -19,7 +19,7 @@
     <div class="row">
 		<div class="col-12">
 			<div class="card border-primary mb-3">
-				<div class="photoset-preview-image" style="background-image: url('{{ MEDIA_URL }}{{ photoset.preview_image }}')" alt="Card image"></div>
+				<div class="photoset-preview-image" style="background-image: url('{{ MEDIA_URL }}{{ photoset.preview_image }}')"></div>
                 <div class="card-body">
 					<p class="card-text">{{ photoset.description }}</p>
 				</div>
